# NeuroFlow

./: .env.example  Makefile  README.md  init_db.py  package.json  pyproject.toml  requirements.txt  serve.py  start.bat  tailwind.config.js
app/: __init__.py  config.py  context.py  extensions.py  permissions.py
app/auth/: forms.py  routes.py  services.py
app/blueprints/attendances/: forms.py  routes.py  services.py
app/blueprints/dashboard/: routes.py
app/blueprints/forms_builder/: forms.py  routes.py  services.py
app/blueprints/org/: forms.py  routes.py
app/blueprints/professionals/: forms.py  routes.py
app/blueprints/schedule/: forms.py  routes.py
app/blueprints/schools/: routes.py
app/blueprints/students/: forms.py  routes.py
app/blueprints/users/: forms.py  routes.py
app/models/: __init__.py  attendance.py  audit.py  base.py  enums.py  form.py  organization.py  professional.py  schedule.py  school.py  student.py  user.py
app/static/css/: input.css
app/static/js/: builder.js
app/templates/: base.html
app/templates/attendances/: detail.html  list.html  new.html
app/templates/auth/: login.html  switch_context.html
app/templates/dashboard/: home.html
app/templates/forms/: _canvas.html  _preview_body.html  builder.html  list.html  new.html  preview.html
app/templates/org/: organization_form.html  school_form.html  schools_list.html
scripts/: seed.py  setup_postgres.ps1
tests/: conftest.py  test_attendance_sharing.py  test_auth.py  test_form_activation.py  test_forms_builder.py  test_permissions.py
(+14 files in other folders)
